deploy fix commit

--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -20,7 +20,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "postinstall": "chmod +x node_modules/.bin/react-scripts || icacls node_modules\\.bin\\react-scripts /grant Everyone:F"
   },
   "eslintConfig": {
     "extends": [
