--- a/Backend/.env
+++ b/Backend/.env
@@ -1,3 +1,3 @@
 MONGODB_URI = mongodb+srv://shashankjaiswal266:shashank12@ecommerce-website.qfjqacq.mongodb.net/E-Commerce?retryWrites=true&w=majority&appName=ECommerce-Website
 TOKEN_SECRET_KEY="venouvnerovoung0itin0nevonidomfvdom"
-FRONTEND_URL=http://localhost:3000
+FRONTEND_URL=https://ecommerce-beta-beige-77.vercel.app/
